--- a/web-design-restaurant-yummyfood/index.html
+++ b/web-design-restaurant-yummyfood/index.html
@@ -131,7 +131,7 @@
             <h4>Chicke Hawain Pizza</h4>
             <p class="food-price">AED30</p>
             <p class="food-detail">
-              Made with Italian Sauce, Chicken, and organice vegetables.
+              Made with Italian Sauce, Chicken, and organic vegetables.
             </p>
             <br />
 
@@ -152,7 +152,7 @@
             <h4>Smoky Burger</h4>
             <p class="food-price">AED15</p>
             <p class="food-detail">
-              Made with Peri Peri Sauce, Chicken, and organice vegetables.
+              Made with Peri Peri Sauce, Chicken, and organic vegetables.
             </p>
             <br />
 
@@ -173,7 +173,7 @@
             <h4>Peri Peri Chicken Burger</h4>
             <p class="food-price">AED20</p>
             <p class="food-detail">
-              Made with Peri Peri Sauce, Chicken, and organice vegetables.
+              Made with Peri Peri Sauce, Chicken, and organic vegetables.
             </p>
             <br />
 
@@ -194,7 +194,7 @@
             <h4>Chicken Dum Biryani</h4>
             <p class="food-price">AED25</p>
             <p class="food-detail">
-              Made with Italian Sauce, Chicken, and organice vegetables.
+              Made with Spices, Chicken, and organic vegetables.
             </p>
             <br />
 
@@ -215,7 +215,7 @@
             <h4>Mutton Dum Biryani</h4>
             <p class="food-price">AED30</p>
             <p class="food-detail">
-              Made with Spices, Mutton, and organice vegetables.
+              Made with Spices, Mutton, and organic vegetables.
             </p>
             <br />
 
@@ -236,7 +236,7 @@
             <h4>Chicken Steam Momo</h4>
             <p class="food-price">AED20</p>
             <p class="food-detail">
-              Made with Italian Sauce, Chicken, and organice vegetables.
+              Made with Chicken, and organic vegetables.
             </p>
             <br />
 
